--- a/app/src/main/res/layout/character_card.xml
+++ b/app/src/main/res/layout/character_card.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:textColor="#000000"
         android:layout_marginBottom="5dp"/>
 
     <ImageView
