--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -11,6 +11,6 @@
         android:gravity="center"
         android:horizontalSpacing="@dimen/grid_horizontal_spacing"
         android:verticalSpacing="@dimen/grid_vertical_spacing"
-        android:layout_margin="@dimen/activity_horizontal_margin"/>
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
 </RelativeLayout>
