--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent" android:background="#e3c27b">
     <TextView
         android:id="@+id/team_title"
         android:layout_width="match_parent"
@@ -11,6 +10,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center"
+        android:textColor="#000000"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"/>
 
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:text="@string/team_button"
         android:layout_gravity="center_horizontal"
+        android:clickable="false"
         android:gravity="center"/>
 
 
