--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="grid_vertical_spacing">10dp</dimen>
 
     <dimen name="team_image_grid">100dp</dimen>
+
+    <dimen name="character_description_image">100dp</dimen>
+    <dimen name="character_description_title_height">50dp</dimen>
 </resources>
