--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,9 @@
     <dimen name="game_hero_card_width">50dp</dimen>
     <dimen name="game_hero_card_text_height">15dp</dimen>
     <dimen name="game_margin">5dp</dimen>
+
+    <dimen name="navigation_width">200dp</dimen>
+
+    <dimen name="navigation_image">100dp</dimen>
+    <dimen name="navigation_text_height">50dp</dimen>
 </resources>
