--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -16,17 +16,41 @@
         android:layout_height="wrap_content"
         android:background="#ffffff"
         android:layout_toRightOf="@+id/game_heroes_list"
+        android:layout_below="@+id/game_info_bar"
         android:layout_margin="@dimen/game_margin"/>
 
-    <TextView
-        android:id="@+id/life_number_text"
-        android:layout_width="@dimen/game_life_card"
+    <RelativeLayout
+        android:id="@+id/game_info_bar"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/game_life_card"
-        android:gravity="center"
-        android:textColor="#ff0000"
-        android:background="#ffffff"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="@dimen/game_margin"/>
+        android:layout_toRightOf="@id/game_heroes_list"
+        android:layout_marginTop="@dimen/game_margin"
+        android:layout_marginRight="@dimen/game_margin">
+
+        <TextView
+            android:id="@+id/life_number_text"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/game_life_card"
+            android:gravity="center"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/game_margin"
+            android:layout_marginLeft="@dimen/game_margin"/>
+
+        <TextView
+            android:id="@+id/game_xp_text"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/game_life_card"
+            android:gravity="center"
+            android:layout_toLeftOf="@+id/life_number_text"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="@dimen/game_margin"
+            android:layout_marginLeft="@dimen/game_margin"/>
+
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
