handle change character on team fragment

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -25,28 +25,31 @@
         android:layout_height="@dimen/game_life_card"
         android:layout_toRightOf="@id/game_heroes_list"
         android:layout_marginTop="@dimen/game_margin"
-        android:layout_marginRight="@dimen/game_margin">
+        android:layout_marginRight="@dimen/game_margin"
+        android:layout_marginLeft="@dimen/game_margin">
 
         <TextView
             android:id="@+id/life_number_text"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/game_life_card"
             android:gravity="center"
+            android:textSize="18sp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="@dimen/game_margin"
-            android:layout_marginLeft="@dimen/game_margin"/>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginRight="@dimen/game_info_bar_margin"
+            android:layout_marginLeft="@dimen/game_info_bar_margin"/>
 
         <TextView
             android:id="@+id/game_xp_text"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/game_life_card"
             android:gravity="center"
-            android:layout_toLeftOf="@+id/life_number_text"
+            android:textSize="18sp"
+            android:layout_toRightOf="@+id/life_number_text"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="@dimen/game_margin"
-            android:layout_marginLeft="@dimen/game_margin"/>
+            android:layout_marginRight="@dimen/game_info_bar_margin"
+            android:layout_marginLeft="@dimen/game_info_bar_margin"/>
 
 
     </RelativeLayout>
