--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="game_hero_card_text_height">15dp</dimen>
     <dimen name="game_margin">5dp</dimen>
     <dimen name="game_life_card">40dp</dimen>
+    <dimen name="game_info_bar_margin">15dp</dimen>
 
     <dimen name="navigation_width">200dp</dimen>
 
