--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -10,7 +10,7 @@
         android:layout_margin="@dimen/game_margin">
     </ListView>
 
-    <hokan.closethebreach.utils.FieldView
+    <hokan.closethebreach.FieldView
         android:id="@+id/game_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
